syntax = "proto3";

option java_package = "com.osc.user_proto";
option java_multiple_files = true;


message UserOTPRequest {
  string email = 1;
  int64 otp = 2;
}

message UserOTPResponse {
  string email = 1;
  int64 otp = 2;
  int32 invalidAttemptCount = 3;
}

message UserOTPAttemptRequest{
  string email = 1;
}

message UserOTPAttemptResponse{
  int32 count = 1;
}

message UserOTPAttemptLimitResponse{
  string email = 1;
  string message = 2;
}

service ForgetPasswordService{
  rpc GetUserOTPRequest(UserOTPRequest) returns (UserOTPResponse);
  rpc IncrementInvalidOTPAttempts(UserOTPRequest) returns (UserOTPResponse);
  rpc GetOTPAttemptRequest(UserOTPAttemptRequest) returns (UserOTPAttemptResponse);
  rpc ForgetPasswordOTPLimit(UserOTPAttemptRequest) returns (UserOTPAttemptLimitResponse);
}
